# pyspace-script

./: FEATURES.md  LICENSE  README.md  core.py  pyproject.toml
debuglog/: __init__.py
examples/: README.md  debug_main.py  example_debug_context.py  example_namespace.py  test_namespaces.py
pyspacelog/: __init__.py  core.py  decorators.py
tools/: README.md  release.py
