[project]
name = "pyspace-script"
version = "0.1.1"
description = "A lightweight namespace debugger for Python"
authors = [{ name = "Tryny8", email = "ton.email@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"